pov-check-health (0.5.1) UNRELEASED; urgency=low

  * check-virtualenvs: meaningful exit code (1 if outdated virtualenvs were
    found, 0 otherwise).

 -- Marius Gedminas <marius@gedmin.as>  Fri, 04 Oct 2013 18:57:25 +0300

pov-check-health (0.5.0) precise; urgency=low

  * New script: check-virtualenvs.

 -- Marius Gedminas <marius@gedmin.as>  Thu, 03 Oct 2013 13:54:16 +0300

pov-check-health (0.4.2) precise; urgency=low

  * check-health -g adds 'checktoomanyproc collectd 2' if it sees collectdmon.
  * Better warning message from checktoomanyproc.
  * Fix typos in documentation: it's -f configfile, not -c configfile.

 -- Marius Gedminas <marius@gedmin.as>  Wed, 28 Aug 2013 20:01:23 +0300

pov-check-health (0.4.1) precise; urgency=low

  * Bugfix: check-health -g omitted the 'checkproc' in front of 'collectd' and
    'collectdmon'.  This results in new copies of collectd being spawned
    whenever you run check-health with the generated config file.

 -- Marius Gedminas <marius@gedmin.as>  Thu, 22 Aug 2013 16:14:33 +0300

pov-check-health (0.4) precise; urgency=low

  * check-health -g to generate a config file.
  * checkproc now supports scripts by using pidof -x.

 -- Marius Gedminas <marius@gedmin.as>  Thu, 22 Aug 2013 12:40:30 +0300

pov-check-health (0.3) precise; urgency=low

  * checkuptime accepts "min", "hour" and "sec" suffixes in addition to "m",
    "h", "s".
  * Fixed bug in extract-documentation.py where it would drop the first
    documented check (checkuptime).
  * Bugfix for checkinodes on /very/long/device/names.

 -- Marius Gedminas <marius@gedmin.as>  Tue, 23 Jul 2013 15:12:28 +0300

pov-check-health (0.2) precise; urgency=low

  * check-health -v for verbose operation.
  * check-health -h for help operation.
  * check-health -f filename for different config file.
  * All checks in functions.sh were documented.
  * Added manual page for check-health(8).

 -- Marius Gedminas <marius@gedmin.as>  Tue, 23 Jul 2013 11:54:11 +0300
