@@ -2,8 +2,9 @@ pov-check-health (0.5.1) UNRELEASED; urgency=low
 
   * check-virtualenvs: meaningful exit code (1 if outdated virtualenvs were
     found, 0 otherwise).
+  * checkmailq: support sendmail in addition to postfix.
 
- -- Marius Gedminas <marius@gedmin.as>  Fri, 04 Oct 2013 18:57:25 +0300
+ -- Marius Gedminas <marius@gedmin.as>  Tue, 15 Oct 2013 10:04:11 +0300
 
 pov-check-health (0.5.0) precise; urgency=low
 
